<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="60dp"
    android:background="@color/colorWhite"
    tools:context=".Reserva">

    <ImageView
        android:layout_width="400dp"
        android:layout_height="280dp"
        android:id="@+id/reserva_bg"
        android:src="@drawable/reserva_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/blank" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="340dp"
        android:layout_height="230dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/reserva_bg"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reserva_titulo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/faca_sua_reserva" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/edit_nome"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/nome_completo"
            android:textSize="11sp"
            android:textStyle="bold"
            android:inputType="textCapWords"
            app:layout_constraintTop_toBottomOf="@id/reserva_titulo"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="15dp"
            app:endIconMode="clear_text"
            android:singleLine="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/edit_phone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/telefone"
            android:textSize="11sp"
            android:textStyle="bold"
            android:inputType="phone"
            app:layout_constraintTop_toBottomOf="@id/reserva_titulo"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="15dp"
            app:endIconMode="clear_text"
            android:singleLine="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pessoas"
            android:text="@string/numero_de_pessoas"
            app:layout_constraintTop_toBottomOf="@id/edit_nome"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="5dp"
            android:textSize="12sp"
            android:textStyle="bold" />

        <RadioGroup android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioGroup"
            app:layout_constraintTop_toBottomOf="@id/pessoas"
            app:layout_constraintLeft_toLeftOf="parent"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/um"
                android:text="@string/_1"
                android:textSize="15sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/dois"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2"
                android:textSize="15sp"
                android:textStyle="bold" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3"
                android:id="@+id/tres"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4"
                android:id="@+id/quatro"
                android:textSize="15sp"
                android:textStyle="bold"/>
         </RadioGroup>

        <TextView
            android:id="@+id/horarios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/edit_phone"
            app:layout_constraintLeft_toRightOf="@id/radioGroup"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/horarios"
            android:textSize = "12sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/pickDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/radioGroup"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/data"
            style="?android:attr/buttonBarButtonStyle" />     <!-- Botão sem borda e fundo -->

        <Spinner
            android:id="@+id/mySpinner"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:spinnerMode="dropdown"
            app:layout_constraintTop_toBottomOf="@id/horarios"
            app:layout_constraintLeft_toRightOf="@id/radioGroup" />

        <Button
            android:id="@+id/btn_enviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="0dp"
            android:text="@string/enviar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mySpinner" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>