<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="60dp"
    android:background="@drawable/fundocinza1"
    android:orientation="vertical"
    tools:context=".Home">

    <ScrollView
        android:layout_width="411dp"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:minWidth="411dp"
            android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/triangulo1"
        android:layout_width="383dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/triangulo1"
        android:contentDescription="@string/triangulo_1" />

    <ImageView
        android:id="@+id/triangulo2"
        android:layout_width="383dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/triangulo2"
        android:contentDescription="@string/triangulo_1" />

        <ImageView
            android:id="@+id/triangulo3"
            android:layout_width="383dp"
            android:layout_height="200dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/triangulo3"
            android:contentDescription="@string/triangulo_1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/slogan"
        app:layout_constraintTop_toBottomOf="@id/triangulo1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/delicioso"
        android:textStyle="bold"
        android:textColor="#feb51a"
        android:textSize="30sp"
        android:fontFamily="@font/gravitasone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/slogan2"
        app:layout_constraintTop_toBottomOf="@id/slogan"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="50dp"
        android:text="@string/home_apresentacao1"
        android:textStyle="bold"
        android:textSize="16sp"
        android:fontFamily="@font/blackopsone"/>

    <ImageView
        android:id="@+id/restaurante_logo2"
        android:layout_width="183dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toBottomOf="@id/slogan2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/restaurante_logo2"
        android:contentDescription="@string/restaurante_logo2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/slogan3"
        app:layout_constraintTop_toBottomOf="@id/restaurante_logo2"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="60dp"
        android:text="@string/home_apresentacao2"
        android:textStyle="bold"
        android:textSize="14sp"
        android:fontFamily="@font/blackopsone"/>

    <ImageView
        android:id="@+id/onda_laranja"
        android:layout_width="190dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="@id/slogan3"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="-5dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/ondas_laranjas"
        android:contentDescription="@string/onda_laranja" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:id="@+id/bottom_bar"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/icone_telefone"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/icone_telefone"
            android:src="@drawable/contato2" />

        <!-- <a href="https://www.freepik.com/icon/world-wide-web_6471995">Icon by setiawanap</a> -->
        <TextView
            android:id="@+id/icone_telefone_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            app:layout_constraintLeft_toRightOf="@id/icone_telefone"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_toEndOf="@id/icone_telefone"
            android:text="@string/telefone1"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/icone_site"
            android:layout_width="40dp"
            android:layout_height="30dp"
            app:layout_constraintRight_toLeftOf="@id/icone_site_txt"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/icone_telefone"
            android:src="@drawable/world_wide_web" />

        <TextView
            android:id="@+id/icone_site_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/www_restauranteti_com"
            android:textSize="16sp"
            android:textStyle="bold" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
