<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:background="#d6d8d8"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/restaurantelogo2"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:alpha="0"
        android:contentDescription="@string/logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/restarante"
        android:text=""
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:fontFamily="@font/gravitasone"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/csb"
        android:text="@string/csbtxt"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:fontFamily="@font/blackopsone"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/btnEntar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/entrar"
        android:layout_marginTop="100dp"
        android:textStyle="bold" />
</LinearLayout>